codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__formatted_subagent_notification_info_event.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• Subagent completed
Agent: 00000000-0000-0000-0000-000000000141

PR #141 finished monitoring.
- Overall state: OPEN
- Ready to merge: yes from 00000000-0000-0000-0000-000000000141
