codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_subagent_wake_notification_renders_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Subagent completed: /root/dispatcher
  └ reconciled
