codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__long_hook_context_is_truncated_with_transcript_hint.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: history
---
• SessionStart hook (stopped)
  hook context: This hook context is intentionally long enough to wrap across
                several terminal rows while keeping the complete value available
                in the transcript overlay. The main conversation should stay
                compact even when a hook injects a large block of instructions
                … +3 lines (ctrl + t to view transcript)
  stop: The hook stopped this turn for an important reason.
        This second line must remain visible in full.
